fix: Revert to working build configuration
The SSR build with Remix/Cloudflare needs proper configuration.
Reverting to the known-working setup until build infrastructure is fixed.

Current status:
- Old deployments work (e.g., 22d92bd5) but without red branding
- New deployments with red branding have worker timeout issues
- Need to properly configure Remix SSR build for Cloudflare

Immediate working URL: https://22d92bd5.heysalad-ai.pages.dev
Password: HeySalad123!

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,9 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "npm run build:remix && npm run copy:assets",
-    "build:remix": "vite build",
-    "copy:assets": "mkdir -p build/client && cp public/*.svg build/client/ 2>/dev/null; cp public/*.png build/client/ 2>/dev/null; true",
+    "build": "vite build --ssr",
+    "copy:assets": "cp public/*.svg build/client/ 2>/dev/null; cp public/*.png build/client/ 2>/dev/null; true",
     "preview": "wrangler pages dev",
     "deploy": "npm run build && wrangler pages deploy build/client",
     "deploy:preview": "npm run build && wrangler pages deploy build/client --branch preview",
